# bird-lg-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  compose.yml  docker-compose.yml
.github/workflows/: audit.yml  docker.yml  lockfile.yml  pr.yml  rust.yml
frontend/: Cargo.toml  Dockerfile
frontend/assets/static/: sortTable.js
frontend/assets/templates/: bgpmap.html  bird.html  page.html  summary.html  whois.html
frontend/src/: api.rs  bgpmap.rs  csp.rs  handlers.rs  main.rs  proxy_client.rs  settings.rs  static_files.rs  summary_parser.rs  telegram.rs  templates.rs  whois.rs
proxy/: Cargo.toml  Dockerfile
proxy/src/: bird.rs  main.rs  middleware.rs  settings.rs  traceroute.rs
