[package]
name = "bird-lg-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bird LG Frontend implementation in Rust"

[[bin]]
name = "bird-lg-rs"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tera.workspace = true
url.workspace = true
regex.workspace = true
reqwest.workspace = true
base64.workspace = true
html-escape.workspace = true

# Additional dependencies for frontend
mime_guess = "2.0"
rust-embed = "8.0" 