[package]
name = "bird-lgproxy-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bird LG Proxy (Backend) implementation in Rust"

[[bin]]
name = "bird-lgproxy-rs"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
clap.workspace = true
config.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipnet.workspace = true
regex.workspace = true

# Additional dependencies for proxy
shlex = "1.3" 