[package]
name = "bird-lgproxy-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Bird Looking Glass Proxy (Backend) implementation in Rust"

[[bin]]
name = "bird-lgproxy-rs"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ipnet.workspace = true
regex.workspace = true
hyper.workspace = true
hyper-util.workspace = true
shlex = { version = "1.3", default-features = false }

[profile.release]
opt-level = "z"         # 最大体积优化
lto = "fat"            # 完整链接时优化
codegen-units = 1       # 单个代码生成单元
panic = "abort"         # abort而不是unwind
strip = "symbols"       # 去除符号和调试信息
overflow-checks = false # 禁用溢出检查（生产环境）

[profile.release.package."*"]
opt-level = "z"
strip = "symbols" 